entire site in spanish

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Mariage &mdash; Lucía et Jérôme</title>
+	<title>Boda &mdash; Lucía et Jérôme</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Mariage Lucía Jérôme 2023" />
 	<meta name="keywords" content="Mariage Lucía Jérôme 2023" />
@@ -60,7 +60,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-2">
-					<div id="fh5co-logo"><a href="index.html">Mariage<strong></strong></a></div>
+					<div id="fh5co-logo"><a href="index.html">Boda<strong></strong></a></div>
 				</div>
 			</div>
 			
@@ -75,9 +75,9 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Jérôme &amp; Lucía</h1>
-							<h2>On va se marier 🥰</h2>
+							<h2>Nos casamos 🥰</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
-							<p><a href="#fh5co-started" class="btn btn-default btn-sm mobile-button">Confirmer votre venue</a></p>
+							<p><a href="#fh5co-started" class="btn btn-default btn-sm mobile-button">Confirma tu asistencia</a></p>
 						</div>
 					</div>
 				</div>
@@ -89,9 +89,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<h2>¡Hola!</h2>
-					<h3>26 aôut 2023, Paris</h3>
-					<p>🍾 Nous vous invitons à célébrer notre mariage 🎉</p>
+					<h2>Bonjour !</h2>
+					<h3>26 de agosto de 2023, París</h3>
+					<p>🍾 ¡Os invitamos a venir a calebrar nuestra boda! 🎉</p>
 				</div>
 			</div>
 			<div class="couple-wrap animate-box">
@@ -123,8 +123,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<span>Les évènements</span>
-					<h2>Mariage</h2>
+					<span>Los eventos</span>
+					<h2>Boda</h2>
 				</div>
 			</div>
 			<div class="row">
@@ -133,23 +133,23 @@
 						<div class="col-md-10 col-md-offset-1">
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
-									<h3>Cérémonie Civile et Religieuse 💒</h3>
+									<h3>Ceremonia civil y religiosa 💒</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>14h00</span>
+										<span>Por definir</span>
 										<span>16h00</span>
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
-										<span>Samedi 26</span>
-										<span>Aôut 2023</span>
+										<span>Sábado 26</span>
+										<span>Agosto 2023</span>
 									</div>
-									<p>À la <a href="https://goo.gl/maps/DCNQrTkBfAJ4zUaa6" target="_blank">mairie</a> du 5ème arrondissement de Paris puis à l'<a href="https://goo.gl/maps/C2ZgK1cMG7oqUrDSA" target="_blank">église</a> Saint Étienne du Mont, à 200m de la mairie.</p>
+									<p>En el <a href="https://goo.gl/maps/DCNQrTkBfAJ4zUaa6" target="_blank">ayuntamiento</a> del distrito 5 de París y luego en la<a href="https://goo.gl/maps/C2ZgK1cMG7oqUrDSA" target="_blank">iglesia</a> Saint-Étienne-du-Mont, a 200m del ayuntamiento.</p>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
-									<h3>Vin d'honneur et dîner 🏰</h3>
+									<h3>Cóctel y cena 🏰</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
 										<span>17h00</span>
@@ -157,10 +157,10 @@
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
-										<span>Samedi 26</span>
-										<span>Aôut 2023</span>
+										<span>Sábado 26</span>
+										<span>Agosto 2023</span>
 									</div>
-									<p>Au <a href="https://goo.gl/maps/hCwc8ERo1k1yoL9u9" target="_blank">château</a> de Lésigny, à environ 30 minutes de Paris en voiture.</p>
+									<p>En el <a href="https://goo.gl/maps/hCwc8ERo1k1yoL9u9" target="_blank">castillo</a> de Lésigny, a unos 30 minutos de París en coche o autobús.</p>
 								</div>
 							</div>
 						</div>
@@ -174,9 +174,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<span>Proposition de logements</span>
-					<h2>Où se loger ?</h2>
-					<p>Certains d'entre vous venant de loin, nous vous conseillons de réserver un de ces hôtels à proximité du château de Lésigny :</p>
+					<span>Propuestas de alojamiento</span>
+					<h2>¿Dónde pasar la noche?</h2>
+					<p> Muchos de vosotros venís desde muy lejos, por lo que os aconsejamos reservar uno de los siguientes hoteles :</p>
 				</div>
 			</div>
 			<div class="row">
@@ -187,10 +187,10 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title"><a href="https://www.golflesigny.com/" target="_blank">Hôtel Abbaye du golf de Lésigny</a></h3>
-									<span class="date">2km du château</span>
+									<span class="date">2km del castillo</span>
 								</div>
 								<div class="timeline-body">
-									<p>Une navette déservira tout au long de la soirée cet hôtel depuis le château. L'hôtel est construit dans une ancienne abbaye du XIIe siècle, ouvert sur l'écrin de verdure des 100 hectares du Golf du Réveillon.</p>
+									<p>Un vehículo gratuito (capacidad de 8 personas) estará disponible a lo largo de la noche para los invitados que se alojen cerca del castillo. La vuelta a París centro al día siguiente no la gestionarían los novios. Hay taxis disponbiles en la zona (precio aproximativo 50 euros). Este hotel está construido en una antigua abadía del siglo XII y rodeado de un espacio verde de 100 hectáreas del Golf du Réveillon. </p>
 								</div>
 							</div>
 						</li>
@@ -199,10 +199,10 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title"><a href="https://brie-comte-robert.kyriad.com/fr-fr/" target="_blank">Kyriad Brie Comte Robert</a></h3>
-									<span class="date">6km du château</span>
+									<span class="date">6km del castillo</span>
 								</div>
 								<div class="timeline-body">
-									<p>Une navette déservira tout au long de la soirée cet hôtel depuis le château. L'hôtel restaurant Kyriad Brie-Comte-Robert est situé à proximité de la RN104, de l'A4 et de l'A5, du RER A et E.</p>
+									<p>Un vehículo gratuito (capacidad de 8 personas) estará disponible a lo largo de la noche para los invitados que se alojen cerca del castillo. La vuelta a París centro al día siguiente no la gestionarían los novios. Hay taxis disponbiles en la zona (precio aproximativo 50 euros). Este hotel restaurante Kyriad Brie-Comte-Robert está situado cerca del hotel precedente y ofrece precios más económicos.</p>
 								</div>
 							</div>
 						</li>
@@ -211,10 +211,10 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title"><a href="https://www.adagio-city.com/fr/booking/aparthotels-list.shtml?q=Aparthotel+Adagio+Paris+Bercy+Village&isAutocomplete=true&hotelDirectId=6789&apartment%5B%5D=2%2C0%2C0%2CXXUBQLAz9R" target="_blank">Aparthotel Adagio Paris Bercy Village</a></h3>
-									<span class="date">30km du château</span>
+									<span class="date">30km del castillo</span>
 								</div>
 								<div class="timeline-body">
-									<p>Pour ceux qui souhaitent rester dans Paris</p>
+									<p>Para los que quieran quedarse en París centro, un autobús estará previsto para desplazar a los invitados a la zona del barrio de Bercy al final de la velada. Este apartahotel tiene precios económicos y conviene a familias y grupos de amigos. </p>
 								</div>
 							</div>
 						</li>
@@ -229,8 +229,8 @@
 			
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Transports</h2>
-					<p>Comment se rendre sur les différents lieux de l'évènement ?</p>
+					<h2>Transportes</h2>
+					<p>¿Cómo llegar a cada lugar de la boda?</p>
 				</div>
 			</div>
 
@@ -241,8 +241,8 @@
 							<i class="icon-calendar"></i>
 						</span>
 						<div class="feature-copy">
-							<h3>Navette</h3>
-							<p>Merci de nous préciser à l'avance si vous souhaitez utiliser la navette vous ramène vers les hôtels à proximité (Abbaye et Kyriad).</p>
+							<h3>Ir al ayuntamiento y a la iglesia</h3>
+							<p> Ambos sitios se sitúan en la plaza del Panteón. En el distrito 5 de París. Las estaciones de metro más cercanas son la línea 10 (parada Maubert-Mutualité o parada Cardinal Lemoine), la línea 7 (parada Place Monde + 10 minutos a pie) o la línea del RER B (Parada Luxembourg). En cuanto a los autobuses, la línea 24 va de la zona de Bercy hasta la zona del Panteón (Parada Panteón). Os aconsejamos utilizar la aplicación Citymapper para desplazaros. Desde allí podéis ver cuál es el mejor itinerario para llegar hasta la plaza del Panteón. También podéis pedir un taxi, Uber, Bolt, Freenow, etc. Si venís en vuestro propio coche, hay un párking de pago cerca del Panteón.</p>
 						</div>
 					</div>
 
@@ -251,8 +251,8 @@
 							<i class="icon-map"></i>
 						</span>
 						<div class="feature-copy">
-							<h3>Parking</h3>
-							<p>Un parking payant se situe à proximité du Panthéon pour les cérémonies civile et religieuse. Au château, un parking gratuit se situe à l'entrée.</p>
+							<h3>Ir al castillo</h3>
+							<p>Un autobús llevará prioritariamente a los invitados que vienen a París en avión y que no conocen la ciudad de París centro al castillo. Al final de la velada el mismo autobús hará un único viaje de vuelta hacia la zona hotelera de Bercy. Para los que pernocten cerca del castillo, un automóvil de capacidad de 8 personas estrá disponible a lo largo de toda la noche.</p>
 						</div>
 					</div>
 
@@ -261,8 +261,8 @@
 							<i class="icon-aircraft-take-off"></i>
 						</span>
 						<div class="feature-copy">
-							<h3>Avion</h3>
-							<p>Nous vous recommandons de réserver vos vols en avance afin de bénéficier de prix attractifs, les compagnies offrant des vols depuis Alicante sont Vueling et Transavia, les vols sont disponibles 6 mois à l'avance.</p>
+							<h3>Avión</h3>
+							<p>Os recomendamos reservar el vuelo a París lo antes posible para conseguir los billetes a un precio asequible. La venta de billetes suele abrir unos 6 meses antes del vuelo. On recomendamos volar con las compañias Vueling (eropuerto Charles de Gaule) o Transavia (aeropuerto Orly) ya que los aeropuertos se sitún relativamente cerca de París. Existe la opción de volar con Ryanair (aeropuerto Beauvais), pero el aeropuerto se sitúa muy lejos y por ello la desaconsejamos. </p>
 						</div>
 					</div>
 
@@ -283,8 +283,8 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Vous avez décidé de venir ?</h2>
-					<p>Si vous avez reçu cette inviation de la part des mariés, merci de bien vouloir remplir le formulaire afin de nous tenir informé de votre venue, au plus tard <b><u>2 mois</u></b> à l'avance 🤗</p>
+					<h2>¿Asistiréis a nuestro enlace?</h2>
+					<p>Si habéis recibido esta invitación de parte de los novios, os agradeceríamos que completéis el siguiente formulario para confirmar asistencia a más tardar con <b><u>2 meses</u></b> de antelación 🤗</p>
 				</div>
 			</div>
 			<div class="row animate-box">
@@ -292,7 +292,7 @@
 					<form class="form-inline" oninput="body.value = name.value +' '+ email.value +' '+ food.value" action="https://api.gaviota.fr/mail" method="post" target="dummyframe">
 						<div class="col-md-4 col-sm-4">
 							<div class="form-group">
-								<label for="name" class="sr-only">Nom</label>
+								<label for="name" class="sr-only">Nombre de los invitados</label>
 								<input type="name" class="form-control" id="name" placeholder="Noms des invités">
 							</div>
 						</div>
@@ -304,12 +304,12 @@
 						</div>
 						<div class="col-md-4 col-sm-4">
 							<div class="form-group">
-								<label for="food" class="sr-only">Remarques, restrictions alimentaires..</label>
+								<label for="food" class="sr-only">Restricciones alimentarias</label>
 								<input type="food" class="form-control" id="food" placeholder="Restrictions alimentaires">
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-4 center">
-							<button type="submit" class="btn btn-default btn-block">Je serais présent</button>
+							<button type="submit" class="btn btn-default btn-block">Confirmar asistencia</button>
 						</div>
 						<input type="text" name="body" id="body"  hidden />
 						<input type="text" name="subject" id="subject"  value="Réponse invités mariage"  hidden />
