--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<h2>Bonjour !</h2>
 					<h3>26 de agosto de 2023, París</h3>
-					<p>🍾 ¡Os invitamos a venir a calebrar nuestra boda! 🎉</p>
+					<p>🍾 ¡Os invitamos a venir a calebrar nuestra enlace! 🎉</p>
 				</div>
 			</div>
 			<div class="couple-wrap animate-box">
@@ -144,7 +144,7 @@
 										<span>Sábado 26</span>
 										<span>Agosto 2023</span>
 									</div>
-									<p>En el <a href="https://goo.gl/maps/DCNQrTkBfAJ4zUaa6" target="_blank">ayuntamiento</a> del distrito 5 de París y luego en la<a href="https://goo.gl/maps/C2ZgK1cMG7oqUrDSA" target="_blank">iglesia</a> Saint-Étienne-du-Mont, a 200m del ayuntamiento.</p>
+									<p>En el <a href="https://goo.gl/maps/DCNQrTkBfAJ4zUaa6" target="_blank">ayuntamiento</a> del distrito 5 de París y luego en la <a href="https://goo.gl/maps/C2ZgK1cMG7oqUrDSA" target="_blank">iglesia</a> Saint-Étienne-du-Mont, a 200m del ayuntamiento.</p>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 text-center">
@@ -238,11 +238,19 @@
 				<div class="col-md-6">
 					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
 						<span class="icon">
-							<i class="icon-calendar"></i>
+							<i class="icon-home"></i>
 						</span>
 						<div class="feature-copy">
 							<h3>Ir al ayuntamiento y a la iglesia</h3>
-							<p> Ambos sitios se sitúan en la plaza del Panteón. En el distrito 5 de París. Las estaciones de metro más cercanas son la línea 10 (parada Maubert-Mutualité o parada Cardinal Lemoine), la línea 7 (parada Place Monde + 10 minutos a pie) o la línea del RER B (Parada Luxembourg). En cuanto a los autobuses, la línea 24 va de la zona de Bercy hasta la zona del Panteón (Parada Panteón). Os aconsejamos utilizar la aplicación Citymapper para desplazaros. Desde allí podéis ver cuál es el mejor itinerario para llegar hasta la plaza del Panteón. También podéis pedir un taxi, Uber, Bolt, Freenow, etc. Si venís en vuestro propio coche, hay un párking de pago cerca del Panteón.</p>
+							<p> Ambos sitios se sitúan en la plaza del Panteón. En el distrito 5 de París. 
+								<ul>
+									<li>Os aconsejamos utilizar la aplicación Citymapper para desplazaros. Desde allí podéis ver cuál es el mejor itinerario para llegar hasta la plaza del Panteón.</li>
+									<li>Las estaciones de metro más cercanas son la línea 10 (parada Maubert-Mutualité o parada Cardinal Lemoine), la línea 7 (parada Place Monde + 10 minutos a pie) o la línea del RER B (Parada Luxembourg).</li>
+									<li> En cuanto a los autobuses, la línea 24 va de la zona de Bercy hasta la zona del Panteón (Parada Panteón). </li>
+									<li>También podéis pedir un taxi, Uber, Bolt, Freenow, etc. </li>
+									<li>Si venís en vuestro propio coche, hay un párking de pago cerca del Panteón.</li>
+								</ul> 
+							</p>
 						</div>
 					</div>
 
