--- a/index.html
+++ b/index.html
@@ -260,7 +260,13 @@
 						</span>
 						<div class="feature-copy">
 							<h3>Ir al castillo</h3>
-							<p>Un autobús llevará prioritariamente a los invitados que vienen a París en avión y que no conocen la ciudad de París centro al castillo. Al final de la velada el mismo autobús hará un único viaje de vuelta hacia la zona hotelera de Bercy. Para los que pernocten cerca del castillo, un automóvil de capacidad de 8 personas estrá disponible a lo largo de toda la noche.</p>
+							<p>
+								<ul>
+									<li>Un autobús llevará prioritariamente a los invitados que vienen a París en avión y que no conocen la ciudad de París centro al castillo.</li>
+									<li>Al final de la velada el mismo autobús hará un único viaje de vuelta hacia la zona hotelera de Bercy. Para los que pernocten cerca del castillo, un automóvil de capacidad de 8 personas estará disponible a lo largo de toda la noche.</li>
+									<li>Si venís en vuestro propio coche, hay un párking gratuito en el recinto del castillo.</li>
+								</ul> 
+							</p>
 						</div>
 					</div>
 
@@ -270,7 +276,12 @@
 						</span>
 						<div class="feature-copy">
 							<h3>Avión</h3>
-							<p>Os recomendamos reservar el vuelo a París lo antes posible para conseguir los billetes a un precio asequible. La venta de billetes suele abrir unos 6 meses antes del vuelo. On recomendamos volar con las compañias Vueling (eropuerto Charles de Gaule) o Transavia (aeropuerto Orly) ya que los aeropuertos se sitún relativamente cerca de París. Existe la opción de volar con Ryanair (aeropuerto Beauvais), pero el aeropuerto se sitúa muy lejos y por ello la desaconsejamos. </p>
+							<p>Os recomendamos reservar el vuelo a París lo antes posible para conseguir los billetes a un precio asequible. La venta de billetes suele abrir unos 6 meses antes del vuelo. 
+								<ul>
+									<li>On recomendamos volar con las compañias Vueling (eropuerto Charles de Gaule) o Transavia (aeropuerto Orly) ya que los aeropuertos se sitún relativamente cerca de París.</li>
+									<li>Existe la opción de volar con Ryanair (aeropuerto Beauvais), pero el aeropuerto se sitúa muy lejos y por ello la desaconsejamos. </li>
+								</ul> 
+							</p>
 						</div>
 					</div>
 
@@ -292,7 +303,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>¿Asistiréis a nuestro enlace?</h2>
-					<p>Si habéis recibido esta invitación de parte de los novios, os agradeceríamos que completéis el siguiente formulario para confirmar asistencia a más tardar con <b><u>2 meses</u></b> de antelación 🤗</p>
+					<p>Si habéis recibido esta invitación de parte de los novios, os agradeceríamos que completéis el siguiente formulario para confirmar asistencia máximo con <b><u>2 meses</u></b> de antelación 🤗</p>
 				</div>
 			</div>
 			<div class="row animate-box">
