--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>¿Asistiréis a nuestro enlace?</h2>
 					<p>Si habéis recibido esta invitación de parte de los novios, os agradeceríamos que completéis el siguiente formulario para confirmar asistencia máximo con <b><u>2 meses</u></b> de antelación 🤗</p>
-					<p>IBAN: FR76 4061 8803 8600 0403 4451 171    BIC: BOUS FRPP XXX</p>
+					<p><b><u>IBAN: FR76 4061 8803 8600 0403 4451 171</u></b>IBAN: FR76 4061 8803 8600 0403 4451 171 &nbsp &nbsp <b><u>BIC: BOUS FRPP XXX</u></b></p>
 				</div>
 			</div>
 			<div class="row animate-box">
