--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<h2>Bonjour !</h2>
 					<h3>26 de agosto de 2023, París</h3>
-					<p>🍾 ¡Os invitamos a venir a calebrar nuestra enlace! 🎉</p>
+					<p>🍾 ¡Os invitamos a venir a calebrar nuestro enlace! 🎉</p>
 				</div>
 			</div>
 			<div class="couple-wrap animate-box">
