--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 									<span class="date">30km del castillo</span>
 								</div>
 								<div class="timeline-body">
-									<p>Para los que quieran quedarse en París centro, un autobús estará previsto para desplazar a los invitados a la zona del barrio de Bercy al final de la velada. Este apartahotel tiene precios económicos y conviene a familias y grupos de amigos. </p>
+									<p>Para los que quieran quedarse en París centro, un autobús gratuito estará previsto para desplazar a los invitados a la zona del barrio de Bercy al final de la velada. Este apartahotel tiene precios económicos y conviene a familias y grupos de amigos. </p>
 								</div>
 							</div>
 						</li>
@@ -263,7 +263,8 @@
 							<p>
 								<ul>
 									<li>Un autobús llevará prioritariamente a los invitados que vienen a París en avión y que no conocen la ciudad de París centro al castillo.</li>
-									<li>Al final de la velada el mismo autobús hará un único viaje de vuelta hacia la zona hotelera de Bercy. Para los que pernocten cerca del castillo, un automóvil de capacidad de 8 personas estará disponible a lo largo de toda la noche.</li>
+									<li>Al final de la velada el mismo autobús hará un único viaje de vuelta hacia la zona hotelera de Bercy. </li>
+									<li>Para los que pernocten cerca del castillo, un automóvil de capacidad de 8 personas estará disponible a lo largo de toda la noche.</li>
 									<li>Si venís en vuestro propio coche, hay un párking gratuito en el recinto del castillo.</li>
 								</ul> 
 							</p>
@@ -278,7 +279,7 @@
 							<h3>Avión</h3>
 							<p>Os recomendamos reservar el vuelo a París lo antes posible para conseguir los billetes a un precio asequible. La venta de billetes suele abrir unos 6 meses antes del vuelo. 
 								<ul>
-									<li>On recomendamos volar con las compañias Vueling (eropuerto Charles de Gaule) o Transavia (aeropuerto Orly) ya que los aeropuertos se sitún relativamente cerca de París.</li>
+									<li>On recomendamos volar con las compañías Vueling (eropuerto Charles de Gaule) o Transavia (aeropuerto Orly) ya que los aeropuertos se sitúan relativamente cerca de París.</li>
 									<li>Existe la opción de volar con Ryanair (aeropuerto Beauvais), pero el aeropuerto se sitúa muy lejos y por ello la desaconsejamos. </li>
 								</ul> 
 							</p>
