--- a/index.html
+++ b/index.html
@@ -9,19 +9,7 @@
 	<title>Boda &mdash; Lucía et Jérôme</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Mariage Lucía Jérôme 2023" />
-	<meta name="keywords" content="Mariage Lucía Jérôme 2023" />
-
-
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
+	<meta name="robots" content="noindex">
 
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
@@ -304,7 +292,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>¿Asistiréis a nuestro enlace?</h2>
-					<p>Si habéis recibido esta invitación de parte de los novios, os agradeceríamos que completéis el siguiente formulario para confirmar asistencia máximo con <b><u>2 meses</u></b> de antelación 🤗</p>
+					<p>Si habéis recibido esta invitación de parte de los novios, os agradeceríamos que completéis el siguiente formulario para confirmar asistencia máximo con <b><u>3 meses</u></b> de antelación 🤗</p>
 					<p><b><u>IBAN:</u></b> FR76 4061 8803 8600 0403 4451 171 &nbsp &nbsp <b><u>BIC:</u></b> BOUS FRPP XXX</p>
 				</div>
 			</div>
