--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<h2>Bonjour !</h2>
 					<h3>26 de agosto de 2023, París</h3>
-					<p>🍾 ¡Os invitamos a venir a calebrar nuestro enlace! 🎉</p>
+					<p>🍾 ¡Os invitamos a venir a celebrar nuestro enlace! 🎉</p>
 				</div>
 			</div>
 			<div class="couple-wrap animate-box">
@@ -284,6 +284,30 @@
 			
 		</div>
 	</div>
+
+	<div id="fh5co-testimonial" style="padding-top: 30px !important; padding-bottom: 50px !important;">
+		<div class="container">
+			<div class="row">
+				<div class="row animate-box">
+					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading" style="margin-bottom: 15px !important;">
+						<h2>Mapa</h2>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-12 animate-box">
+
+						<div id="map"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<script
+	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
+	defer
+></script>
 
 
 	<div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/img_bg_4.jpg);">
