--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 		</div>
 	</div>
 
-	<div id="fh5co-couple-story">
+	<div id="fh5co-couple-story"  style="padding-top: 50px !important; padding-bottom: 50px !important;">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
@@ -212,7 +212,7 @@
 		</div>
 	</div>
 
-	<div id="fh5co-services" class="fh5co-section-gray">
+	<div id="fh5co-services" class="fh5co-section-gray"  style="padding-top: 50px !important; padding-bottom: 50px !important;">
 		<div class="container">
 			
 			<div class="row animate-box">
