--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
 	<script src="js/simplyCountdown.js"></script>
 	<!-- Main -->
 	<script src="js/main.js"></script>
+	<script src="js/map.js"></script>
 
 	<script>
     var d = new Date(2023, 7, 26, 14);
