--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Mariage Lucía Jérôme 2023" />
 	<meta name="robots" content="noindex">
+	<link rel="icon" href="images/favicon.svg" />
 
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
