--- a/index.html
+++ b/index.html
@@ -172,6 +172,42 @@
 				<div class="col-md-12 col-md-offset-0">
 					<ul class="timeline animate-box">
 						<li class="animate-box">
+							<div class="timeline-badge" style="background-image:url(images/ibis.png);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title"><a href="https://all.accor.com/hotel/1743/index.fr.shtml#origin=accor" target="_blank">Hôtel Ibis Bercy Village</a></h3>
+									<span class="date">30km del castillo</span>
+								</div>
+								<div class="timeline-body">
+									<p>Para los que quieran quedarse en París centro, un autobús gratuito estará previsto para desplazar a los invitados a la zona del barrio de Bercy al final de la velada. Este es el hotel que más os recomendamos para 2 personas ya que se sitúa en la zona mas cercana a la parada final del autobús y porque es una buena opción para visitar París. </p>
+								</div>
+							</div>
+						</li>
+						<li class="animate-box">
+							<div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title"><a href="https://www.adagio-city.com/fr/booking/aparthotels-list.shtml?q=Aparthotel+Adagio+Paris+Bercy+Village&isAutocomplete=true&hotelDirectId=6789&apartment%5B%5D=2%2C0%2C0%2CXXUBQLAz9R" target="_blank">Aparthotel Adagio Paris Bercy Village</a></h3>
+									<span class="date">30km del castillo</span>
+								</div>
+								<div class="timeline-body">
+									<p>Para los que quieran quedarse en París centro, un autobús gratuito estará previsto para desplazar a los invitados a la zona del barrio de Bercy al final de la velada. Este apartahotel tiene precios económicos y conviene a familias y grupos de amigos. Además se sitúa en el mismo edifcio que el Ibis. </p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge" style="background-image:url(images/campa.png);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title"><a href="https://www.hotelbercy.com/" target="_blank">Hôtel Campanile Paris Bercy</a></h3>
+									<span class="date">30km del castillo</span>
+								</div>
+								<div class="timeline-body">
+									<p>Para los que quieran quedarse en París centro, un autobús gratuito estará previsto para desplazar a los invitados a la zona del barrio de Bercy al final de la velada. Este hotel es similar al Ibis pero está peor situado. Proponemos esta opción si no queda sitio en el Ibis.</p>
+								</div>
+							</div>
+						</li>
+						<li class="animate-box">
 							<div class="timeline-badge" style="background-image:url(images/couple-1.jpg);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -192,18 +228,6 @@
 								</div>
 								<div class="timeline-body">
 									<p>Un vehículo gratuito (capacidad de 8 personas) estará disponible a lo largo de la noche para los invitados que se alojen cerca del castillo. La vuelta a París centro al día siguiente no la gestionarían los novios. Hay taxis disponbiles en la zona (precio aproximativo 50 euros). Este hotel restaurante Kyriad Brie-Comte-Robert está situado cerca del hotel precedente y ofrece precios más económicos.</p>
-								</div>
-							</div>
-						</li>
-						<li class="animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title"><a href="https://www.adagio-city.com/fr/booking/aparthotels-list.shtml?q=Aparthotel+Adagio+Paris+Bercy+Village&isAutocomplete=true&hotelDirectId=6789&apartment%5B%5D=2%2C0%2C0%2CXXUBQLAz9R" target="_blank">Aparthotel Adagio Paris Bercy Village</a></h3>
-									<span class="date">30km del castillo</span>
-								</div>
-								<div class="timeline-body">
-									<p>Para los que quieran quedarse en París centro, un autobús gratuito estará previsto para desplazar a los invitados a la zona del barrio de Bercy al final de la velada. Este apartahotel tiene precios económicos y conviene a familias y grupos de amigos. </p>
 								</div>
 							</div>
 						</li>
@@ -234,7 +258,7 @@
 							<p> Ambos sitios se sitúan en la plaza del Panteón. En el distrito 5 de París. 
 								<ul>
 									<li>Os aconsejamos utilizar la aplicación Citymapper para desplazaros. Desde allí podéis ver cuál es el mejor itinerario para llegar hasta la plaza del Panteón.</li>
-									<li>Las estaciones de metro más cercanas son la línea 10 (parada Maubert-Mutualité o parada Cardinal Lemoine), la línea 7 (parada Place Monde + 10 minutos a pie) o la línea del RER B (Parada Luxembourg).</li>
+									<li>Las estaciones de metro más cercanas son la línea 10 (parada Maubert-Mutualité o parada Cardinal Lemoine), la línea 7 (parada Place Monge + 10 minutos a pie) o la línea del RER B (Parada Luxembourg).</li>
 									<li> En cuanto a los autobuses, la línea 24 va de la zona de Bercy hasta la zona del Panteón (Parada Panteón). </li>
 									<li>También podéis pedir un taxi, Uber, Bolt, Freenow, etc. </li>
 									<li>Si venís en vuestro propio coche, hay un párking de pago cerca del Panteón.</li>
