--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 			<div class="row">
 				<div class="col-md-12 col-md-offset-0">
 					<ul class="timeline animate-box">
-						<li class="animate-box">
+						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge" style="background-image:url(images/ibis.png);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
