--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 									<span class="date">2km del castillo</span>
 								</div>
 								<div class="timeline-body">
-									<p>Un vehículo gratuito (capacidad de 8 personas) estará disponible a lo largo de la noche para los invitados que se alojen cerca del castillo. La vuelta a París centro al día siguiente no la gestionarían los novios. Hay taxis disponbiles en la zona (precio aproximativo 50 euros). Este hotel está construido en una antigua abadía del siglo XII y rodeado de un espacio verde de 100 hectáreas del Golf du Réveillon. </p>
+									<p>Un minibús estará disponible a lo largo de la noche para los invitados que se alojen cerca del castillo. La vuelta a París centro al día siguiente no la gestionarían los novios. Hay taxis disponbiles en la zona (precio aproximativo 50 euros). Este hotel está construido en una antigua abadía del siglo XII y rodeado de un espacio verde de 100 hectáreas del Golf du Réveillon. </p>
 								</div>
 							</div>
 						</li>
@@ -227,7 +227,7 @@
 									<span class="date">6km del castillo</span>
 								</div>
 								<div class="timeline-body">
-									<p>Un vehículo gratuito (capacidad de 8 personas) estará disponible a lo largo de la noche para los invitados que se alojen cerca del castillo. La vuelta a París centro al día siguiente no la gestionarían los novios. Hay taxis disponbiles en la zona (precio aproximativo 50 euros). Este hotel restaurante Kyriad Brie-Comte-Robert está situado cerca del hotel precedente y ofrece precios más económicos.</p>
+									<p>Un minibús estará disponible a lo largo de la noche para los invitados que se alojen cerca del castillo. La vuelta a París centro al día siguiente no la gestionarían los novios. Hay taxis disponbiles en la zona (precio aproximativo 50 euros). Este hotel restaurante Kyriad Brie-Comte-Robert está situado cerca del hotel precedente y ofrece precios más económicos.</p>
 								</div>
 							</div>
 						</li>
@@ -272,13 +272,14 @@
 							<i class="icon-map"></i>
 						</span>
 						<div class="feature-copy">
-							<h3>Ir al castillo</h3>
+							<h3>Ir al castillo y volver al hotel</h3>
 							<p>
 								<ul>
-									<li>Un autobús llevará prioritariamente a los invitados que vienen a París en avión y que no conocen la ciudad de París centro al castillo.</li>
-									<li>Al final de la velada el mismo autobús hará un único viaje de vuelta hacia la zona hotelera de Bercy. </li>
-									<li>Para los que pernocten cerca del castillo, un automóvil de capacidad de 8 personas estará disponible a lo largo de toda la noche.</li>
+									<li>Un autobús llevará prioritariamente a los invitados que vienen a París en avión, que no disponen de coche y que no conocen la ciudad de París. Este autobús realizará una ida al castillo.</li>
+									<li>Al final de la boda el mismo autobús hará un único viaje de vuelta hacia la zona hotelera de Bercy. </li>
 									<li>Si venís en vuestro propio coche, hay un párking gratuito en el recinto del castillo.</li>
+									<li>Para los que pernocten cerca del castillo, un automóvil de capacidad de 8 personas estará disponible a lo largo de toda la noche. Es importante saber que si dormís en los hoteles cercanos al castillo, la vuelta a París al día siguiente se deberá realizar en coche o en taxi.</li>
+									<li></li>
 								</ul> 
 							</p>
 						</div>
@@ -387,14 +388,6 @@
 					<p>
 						<small class="block">&copy; 2023 Jérôme et Lucía. All Rights Reserved.</small> 
 						<small class="block">Designed by <a href="https://jeromelechampion.fr" target="_blank">jeromelechampion.fr</a></small>
-					</p>
-					<p>
-						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-						</ul>
 					</p>
 				</div>
 			</div>
