--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title"><a href="https://all.accor.com/hotel/1743/index.fr.shtml#origin=accor" target="_blank">Hôtel Ibis Bercy Village</a></h3>
-									<span class="date">30km del castillo</span>
+									<span class="date">París centro, 30km del castillo</span>
 								</div>
 								<div class="timeline-body">
 									<p>Para los que quieran quedarse en París centro, un autobús gratuito estará previsto para desplazar a los invitados a la zona del barrio de Bercy al final de la velada. Este es el hotel que más os recomendamos para 2 personas ya que se sitúa en la zona mas cercana a la parada final del autobús y porque es una buena opción para visitar París. </p>
@@ -188,7 +188,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title"><a href="https://www.adagio-city.com/fr/booking/aparthotels-list.shtml?q=Aparthotel+Adagio+Paris+Bercy+Village&isAutocomplete=true&hotelDirectId=6789&apartment%5B%5D=2%2C0%2C0%2CXXUBQLAz9R" target="_blank">Aparthotel Adagio Paris Bercy Village</a></h3>
-									<span class="date">30km del castillo</span>
+									<span class="date">París centro, 30km del castillo</span>
 								</div>
 								<div class="timeline-body">
 									<p>Para los que quieran quedarse en París centro, un autobús gratuito estará previsto para desplazar a los invitados a la zona del barrio de Bercy al final de la velada. Este apartahotel tiene precios económicos y conviene a familias y grupos de amigos. Además se sitúa en el mismo edifcio que el Ibis. </p>
@@ -200,7 +200,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title"><a href="https://www.hotelbercy.com/" target="_blank">Hôtel Campanile Paris Bercy</a></h3>
-									<span class="date">30km del castillo</span>
+									<span class="date">París centro, 30km del castillo</span>
 								</div>
 								<div class="timeline-body">
 									<p>Para los que quieran quedarse en París centro, un autobús gratuito estará previsto para desplazar a los invitados a la zona del barrio de Bercy al final de la velada. Este hotel es similar al Ibis pero está peor situado. Proponemos esta opción si no queda sitio en el Ibis.</p>
