--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 									<span class="date">París centro, 30km del castillo</span>
 								</div>
 								<div class="timeline-body">
-									<p>Para los que quieran quedarse en París centro, un autobús gratuito estará previsto para desplazar a los invitados a la zona del barrio de Bercy al final de la velada. Este es el hotel que más os recomendamos para 2 personas ya que se sitúa en la zona mas cercana a la parada final del autobús y porque es una buena opción para visitar París. </p>
+									<p>Para los que quieran quedarse en París centro, un autobús gratuito estará previsto para desplazar a los invitados a la zona del barrio de Bercy al final de la velada. Este es el hotel que más os recomendamos para 2 personas ya que se sitúa en la zona más cercana a la parada final del autobús y porque es una buena opción para visitar París. </p>
 								</div>
 							</div>
 						</li>
