--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
 							<h3>Ir al castillo y volver al hotel</h3>
 							<p>
 								<ul>
-									<li>Un autobús llevará prioritariamente a los invitados que vienen a París en avión, que no disponen de coche y que no conocen la ciudad de París. Este autobús realizará una ida al castillo.</li>
-									<li>Al final de la boda el mismo autobús hará un único viaje de vuelta hacia la zona hotelera de Bercy. </li>
+									<li>Un autobús llevará prioritariamente a los invitados que vienen a París en avión, que no disponen de coche y que no conocen la ciudad de París. Este autobús realizará una ida al castillo desde la iglesia.</li>
+									<li>Al final de la boda el mismo autobús hará un único viaje de vuelta desde el castillo hasta la zona hotelera de Bercy. </li>
 									<li>Si venís en vuestro propio coche, hay un párking gratuito en el recinto del castillo.</li>
 									<li>Para los que pernocten cerca del castillo, un automóvil de capacidad de 8 personas estará disponible a lo largo de toda la noche. Es importante saber que si dormís en los hoteles cercanos al castillo, la vuelta a París al día siguiente se deberá realizar en coche o en taxi.</li>
 								</ul> 
